--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js", 
+    "watch": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "mysql": "^2.18.1"
   },
   "devDependencies": {
-    "handlebars-helper-css": "^0.1.0"
+    "handlebars-helper-css": "^0.1.0",
+    "nodemon": "^2.0.4"
   }
 }
